--- a/assets/styles/bradley.css
+++ b/assets/styles/bradley.css
@@ -1,14 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-
-.fdb-block {
-    padding: 30px 0;
-}
-
-* {
-    font-family: "Poppins", sans-serif;
-}
-
 :root {
     --primary-Color: #1E88E5;
     --secondary-Color: #544D85;
@@ -25,10 +16,17 @@
     --button-padding: 5px 25px;
     --button-border-radius: 50px;
     --button-font-weight: 500;
-    --heading: 35px;
-    --heading-two: 25px;
+    --logo-border-radius: 15px;
+    --jumbotron-padding: 30px 16px;
+    --section-padding:30px 0px;
+    --heading:50px;
+    --heading-large: 35px;
+    --heading-medium: 25px;
+    --paragraph: 18px;
 }
-
+.fdb-block {
+    padding: 0rem 0;
+}
 /* headerhdm8ad340b3 */
 .headerhdm8ad340b3 .navbar-light .navbar-nav .nav-link{
     color: var(--secondary-Color);
@@ -42,7 +40,10 @@
 }
 /* aboutd1e3f52aae36e7047 */
 .aboutd1e3f52aae36e7047 .DescriptionHeading {
-    font-size: 40px;
+    font-size: var(--heading);
+}
+.aboutd1e3f52aae36e7047 .DescriptionPara{
+    font-size: var(--paragraph);
 }
 .aboutd1e3f52aae36e7047 .btn-outline-secondary{
 background-color: var(--error-Color);
@@ -58,8 +59,11 @@ color: var(--main-Background-Color);
 font-weight: var(--button-font-weight);
 }
 /* fernandof38911b935c3ef6d9 */
+.fernandof38911b935c3ef6d9{
+    
+}
 .fernandof38911b935c3ef6d9 .fdb-block {
-    padding: 4.5rem 0;
+    padding: 0rem 0;
 }
 .fernandof38911b935c3ef6d9 .btn-primary,
 .fernandof38911b935c3ef6d9 .btn-primary:hover,
@@ -68,13 +72,27 @@ font-weight: var(--button-font-weight);
     background-color: var(--secondary-Background-Color);
     border-radius: var(--button-border-radius);
     padding: var(--button-padding);
+    border-color: var(--secondary-Background-Color);
 }
 .fernandof38911b935c3ef6d9 h1 {
-   font-size: var(--heading);
+   font-size: var(--heading-large);
 }
 .fernandof38911b935c3ef6d9 strong {
     font-weight: var(--button-font-weight) !important;
 }
+.fernandof38911b935c3ef6d9 .fdb-block {
+    padding: 0rem 0;
+}
+.fernandof38911b935c3ef6d9 .lead{
+font-size: var(--paragraph);
+}
+.fernandof38911b935c3ef6d9 .pt-5{
+    padding-top: 0rem !important;
+    }
+    .fernandof38911b935c3ef6d9 h3{
+        font-size: var(--heading-medium);
+        margin-top: 10px;
+    }
 /* teama72342011f2d707e */
 .teama72342011f2d707e .row.heading h2{
     font-size: var(--heading);
