--- a/assets/styles/bradley.css
+++ b/assets/styles/bradley.css
@@ -139,18 +139,26 @@ font-size: var(--paragraph);
 .counterc1486b52e923e265f h2{
     color: var(--error-Color);
     margin-top: 10px;
+    font-size: var(--heading-large);
+}
+.counterc1486b52e923e265f h4 {
+    font-size: var(--heading-medium);
 }
 /* fuskonift41bl2cga4 */
 .fuskonift41bl2cga4 h1 {
-    font-size: var(--heading);
+    font-size: var(--heading-large);
 }
 .fuskonift41bl2cga4 h3 {
-    font-size: var(--heading-two);
+    font-size: var(--heading-medium);
 }
 .fuskonift41bl2cga4 a,
 .fuskonift41bl2cga4 a:hover{
     color: var(--black-Color);
     font-weight: var(--button-font-weight);
+}
+.fuskonift41bl2cga4 .lead {
+    font-size: var(--paragraph);
+    font-weight: 400;
 }
 /* footerb5f31747c48ae942 */
 .footerb5f31747c48ae942 .footer-wrap {
@@ -162,4 +170,10 @@ font-size: var(--paragraph);
 }
 .footerb5f31747c48ae942 footer .newsletter input[type="text"]:focus-visible{
     outline: none;
+}
+.footerb5f31747c48ae942 .footer-wrap p{
+    font-size: 16px;
+}
+.footerb5f31747c48ae942 .copyright{
+    font-size: 16px;
 }
